@@ -1,4 +1,4 @@
 DIST skype-call-recorder-0.5.tar.gz 85650 RMD160 8ed0eee738ada6dc66bc83f7ade447ab5f7a30ac SHA1 d708ff629d7f6f37832779580238a9fef0f6304a SHA256 99595a6f252537fb6a7363caa0ad199488cc6d5ecaafc3a3011c2c024d0f1e1c
 EBUILD skype-call-recorder-0.5.ebuild 650 RMD160 808a4aba40de6a6318ec9ab62571daa3477d6bd8 SHA1 548d5c9ceb87cd1ec1d71fa2f947c64a42f81bdb SHA256 74bd4c070da9749118d67f01d62eba9bdb38bcb9f65773c85e431092693b527e
-MISC ChangeLog 532 RMD160 19e221bddc2aec7466bdfe68195ffa855adcfe63 SHA1 fbd0133eb7b934a4ca4926702f357c8f3dc0ed0f SHA256 07415a7eba5a314561b8c5bb9df8308ca1b14eec7160a4af860cc84f1025a643
-MISC metadata.xml 328 RMD160 628186acc0b2d1492740d555e5d571e01e5d8c31 SHA1 a686b24a0281a2db32efe5a17dcb324e67e380f7 SHA256 26fad18446e91245733d6b6c72f1fa6965f6b2e2bce080c573dc0325a1a14d9c
+MISC ChangeLog 622 RMD160 3ceb82d86ff55726d1888869a02d86ff710a7421 SHA1 131f795bd4e768f2a966cac74e053c29762fa00c SHA256 d04a83195728313b1fabd026ff528f20b57059414721c07820f1ca7cb9d50118
+MISC metadata.xml 284 RMD160 fdbc7ef7881367e201f273eb9db9ef921584275a SHA1 e72f5abf95c780c14c5082e67e299ecf68281268 SHA256 d533ae1b2e8fee6aee50e0dfb8ef947612ac52fb5441f317c211ed2322bc7638
