@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-	<email>jlh@gmx.ch</email>
-</maintainer>
+<herd>maintainer-wanted</herd>
 <longdescription lang="en">
 Skype Call Recorder records your Skype Calls to MP3/Ogg/WAV files.
 </longdescription>
