@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
+  Fix metadata.xml
+
   06 Aug 2008; Jean-Luc Herren (jlh) <jlh@gmx.ch>
   skype-call-recorder-0.5.ebuild:
   Revert part of r6687 since <x11-libs/qt-4.3 will not work
